refactor: RedisSearchConfig RedisSearhClient리팩터링